--- a/src/index.css
+++ b/src/index.css
@@ -18,16 +18,19 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  overflow: hidden;
+  background: grey;
+  background-image: linear-gradient(45deg, hsl(331, 36%, 12%) 0%, hsl(334, 31%, 16%) 99%, hsl(331, 36%, 12%) 100%);
+
+  position: absolute;
+  inset: 0;
 }
 
 h1 {
@@ -46,9 +49,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -59,9 +64,11 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
